[tool.black]
line-length = 120
target_version = ["py36", "py37", "py38"]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
from_first = false
include_trailing_comma = true
length_sort = false
multi_line_output = 3
order_by_type = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true
line_length = 120
force_grid_wrap = 0

[tool.coverage.run]
source = ["detox_bridge"]
relative_files = true
branch = true
omit = ["tests/*"]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
